# Zdyb

./: biz-library.gradle  build.gradle  ext.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/exampleFlavor/release/: output-metadata.json
app/jks/: zdyb_ldjc.jks  zdyb_obd.jks
app/src/exampleFlavor/res/values/: strings.xml
app/src/ldjc/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: main_nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-v29/: themes.xml
app/src/obd/res/values/: strings.xml
app/src/zdyb/res/values/: strings.xml  themes.xml
digNativelib/: build.gradle
digNativelib/src/main/cpp/: CMakeLists.txt  dignativelib.cpp
gradle/wrapper/: gradle-wrapper.properties
guiNativelib/: build.gradle
guiNativelib/src/main/cpp/: ActiveTestShow.cpp  Arithmetic.cpp  AutoLog.cpp  Base64.cpp  BaseDataStream.cpp  Binary.cpp  CJsonObject.cpp  CMakeLists.txt  Com.cpp  CommWithEcu.cpp  DataStreamShow.cpp  Database.cpp  Debug.cpp  Display.cpp  EcuCommException.cpp  Gui.cpp  Information.cpp  J1939.cpp  MenuShow.cpp  MenuTree.cpp  MultiSelectShow.cpp  MyHttp.cpp  Profile.cpp  Readme.txt  ReceiveFrame.cpp  RunEnvironment.cpp  RunLog.cpp  SendFrame.cpp  ShortTestShow.cpp  SpecialFuncTestShow.cpp  StdAfx.cpp  StdDataStream.cpp  TroubleCodeShow.cpp  VehicleInfo.cpp  Warrant.cpp  cJSON.c  gui-lib.cpp  queue_read_usb.c  t_sprintf.c
guiNativelib/src/main/cpp/include/: ActiveTestShow.h  Arithmetic.h  AutoLog.h  Base64.h  BaseDataStream.h  Binary.h  CJsonObject.h  Com.h  CommWithEcu.h  Cummins_Communication.h  DataFile.h  DataStreamShow.h  Database.h  Debug.h  Debug.h.bak  Display.h  EcuCommException.h  Gui.h  Information.h  J1939.h  MenuShow.h  MenuTree.h  MultiSelectShow.h  MyHttp.h  Profile.h  ReceiveFrame.h  RunDate.h  RunEnvironment.h  RunLog.h  SendFrame.h  ShortTestShow.h  SpecialFuncTestShow.h  StdAfx.h  StdDataStream.h  TroubleCodeShow.h  VehicleInfo.h  Warrant.h  adsStd.h  auto_tchar.h  cJSON.h  (+3 more)
lib_common/: build.gradle
lib_common/src/main/: AndroidManifest.xml
lib_common/src/main/res/drawable/: bg_frame_radius_10.xml  bg_frame_radius_10_stroke_1.xml  bg_frame_radius_5_stroke_1.xml
lib_common/src/main/res/layout/: common_toolbar.xml  device_loading.xml
lib_common/src/main/res/values-night/: themes.xml
lib_common/src/main/res/values-sw533dp/: dimens.xml
lib_common/src/main/res/values-sw592dp/: dimens.xml
lib_common/src/main/res/values-sw600dp/: dimens.xml
libp7zip2/: build.gradle
libp7zip2/src/main/: AndroidManifest.xml
libp7zip2/src/main/cpp/: CMakeLists_backup.txt  ndkhelper.h  p7zip.cpp
module_base/: build.gradle
module_base/src/main/: AndroidManifest.xml
module_base/src/main/manifest/: AndroidManifest.xml
module_diagnosis/: build.gradle
module_diagnosis/src/main/: AndroidManifest.xml
module_diagnosis/src/main/assets/: TaskID.ini
module_diagnosis/src/main/manifest/: AndroidManifest.xml
module_obd/: build.gradle
module_obd/src/main/: AndroidManifest.xml
module_obd/src/main/assets/: data.vdi
module_obd/src/main/manifest/: AndroidManifest.xml
(+470 files in other folders)
